--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
       <!-- end of Nav -->
       <main>
         
-        <header class=" bg-sky-200 m-6 p-6 mx-auto rounded-xl sm:w-4/5">
-          <img class="mx-auto md:w-4/5 max-w-6xl rounded-xl" src="images/Image.gif" id="image" alt="">
+        <header class=" m-6 p-6 mx-auto rounded-xl sm:w-4/5">
+          <img class="w-full mx-auto md:w-4/5 max-w-6xl rounded-xl" src="images/Image.gif" id="image" alt="">
         </header>
         <div><!-- Hero Section --></div>
         <div class="bg-slate-200 m-6 p-6 mx-auto rounded-xl sm:w-4/5">
@@ -93,11 +93,11 @@
             </p>
           
         </div>
-        <div class="flex w-40 gap-8 justify-center mx-auto m-6">
+        <div class="grid grid-cols-1 md:grid-cols-3 mx-auto gap-4 sm:w-4/5">
           <!-- Badges for facebook instagram and apply for membership -->
-          <img src="images/facebook.png" alt="Facebook" />
-          <img src="images/instagram.png" alt="Instagram" />
-          <img src="images/membership.png" alt="Apply to Join" />
+          <img class="mx-auto w-64 shadow-lg" src="images/facebook.png" alt="Facebook" />
+          <img class="mx-auto w-64 shadow-lg" src="images/instagram.png" alt="Instagram" />
+          <img class="mx-auto w-64 shadow-lg" src="images/membership.png" alt="Apply to Join" />
         </div>
         <div class="md:w-4/5 mx-auto text-center bg-slate-200 p-5 my-6">
           <p>
