Update navigation links in HTML files

--- a/public/about.html
+++ b/public/about.html
@@ -19,9 +19,9 @@
             <nav class=" pt-4  ">
               <ul class="flex-col text-center gap-2 justify-between mt-4 sm:flex-row md:flex bg-blue-600 ">
         
-                  <li class="p-3 md:ml-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/index.html">Home</a></li>
+                  <li class="p-3 md:ml-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="public/index.html">Home</a></li>
                   <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/contact">Contact</a></li>
-                  <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/groups">Groups</a></li>
+                  <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="public/groups-details.html">Groups</a></li>
                   <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/events">Events</a></li>
                   <li class="p-3 md:mr-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/info">Information</a></li>
               </ul>
