--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
         <nav class=" pt-4  ">
           <ul class="flex-col text-center gap-2 justify-between mt-4 sm:flex-row md:flex bg-blue-600 ">
               <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/public/about.html">About Us</a>
-              <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/contact">Contact</a></li>
+              <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="public/contact.html">Contact</a></li>
               <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/public/group-details.html">Groups</a></li>
-              <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/events">Events</a></li>
-              <li class="p-3 md:mr-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/info">Information</a></li>
+              <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/public/events">Events</a></li>
+              <li class="p-3 md:mr-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/public/info.html">Information</a></li>
           </ul>
           <div>
             <ul  class="flex justify-around gap-3 py-4 bg-slate-200">
