--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <div>
         <!-- Navbar -->
         <div class="flex h-16 justify-around items-center pt-4">
-          <img class="h-10 object-contain" src="images/u3a.png" alt="usa logo">
+          <a href="public/index.html"><img class="h-10 object-contain" src="images/u3a.png" alt="usa logo"></a>
           <h1 class="text-2xl">
             <a href="/">U3A Responsive Website</a>
           </h1>
