Update user authentication logic

--- a/public/about.html
+++ b/public/about.html
@@ -11,7 +11,7 @@
         <div>
             <!-- Navbar -->
             <div class="flex h-16 justify-around items-center pt-4">
-              <img class="h-10 object-contain" src="images/u3a.png" alt="usa logo">
+              <a href="index.html"><img class="h-10 object-contain" src="images/u3a.png" alt="usa logo"></a>
               <h1 class="text-2xl">
                 <a href="/">U3A Responsive Website</a>
               </h1>
@@ -19,9 +19,9 @@
             <nav class=" pt-4  ">
               <ul class="flex-col text-center gap-2 justify-between mt-4 sm:flex-row md:flex bg-blue-600 ">
         
-                  <li class="p-3 md:ml-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="public/index.html">Home</a></li>
+                  <li class="p-3 md:ml-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="index.html">Home</a></li>
                   <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/contact">Contact</a></li>
-                  <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="public/groups-details.html">Groups</a></li>
+                  <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="groups-details.html">Groups</a></li>
                   <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/events">Events</a></li>
                   <li class="p-3 md:mr-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="/info">Information</a></li>
               </ul>
