--- a/public/about.html
+++ b/public/about.html
@@ -11,7 +11,7 @@
         <div>
             <!-- Navbar -->
             <div class="flex h-16 justify-around items-center pt-4">
-              <a href="index.html"><img class="h-10 object-contain" src="images/u3a.png" alt="usa logo"></a>
+              <a href="index.html"><img class="h-10 object-contain" src="images/u3a.png" alt="u3a logo"></a>
               <h1 class="text-2xl">
                 <a href="/">U3A Responsive Website</a>
               </h1>
