Update links in group-details.html

--- a/public/group-details.html
+++ b/public/group-details.html
@@ -21,8 +21,8 @@
             
               <li class="p-3 md:ml-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="index.html">Home</a></li>
               <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="about.html">About Us</a>
-              <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="contact">Contact</a></li>
-              <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="events">Events</a></li>
+              <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="contact.html">Contact</a></li>
+              <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="events.html">Events</a></li>
               <li class="p-3 md:mr-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="info.html">Information</a></li>
           </ul>
           <div>
