Fix broken links in navigation

--- a/public/about.html
+++ b/public/about.html
@@ -23,7 +23,7 @@
                   <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="contact.html">Contact</a></li>
                   <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="group-details.html">Groups</a></li>
                   <li class="p-3 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="events.html">Events</a></li>
-                  <li class="p-3 md:mr-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="info">Information</a></li>
+                  <li class="p-3 md:mr-6 text-xl text-yellow-300 hover:text-white border-b md:border-0 hover:bg-blue-700"><a href="info.html">Information</a></li>
               </ul>
               <div>
                 <ul  class="flex justify-around gap-3 py-4 bg-slate-200">
