Add footer with links to Association Rules, Inclusion Policy, and Privacy Policy to HTML files

--- a/public/info.html
+++ b/public/info.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Information Page</h1>
+    <footer class="bg-gray-300 p-6 sticky">
+        <ul class="flex gap-6 justify-center">
+          <li><a href="#">Association Rules</a></li>
+          <li><a href="#">Inclusion Policy</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </footer>
 </body>
 </html>
