Update body class in group-details.html

--- a/public/group-details.html
+++ b/public/group-details.html
@@ -8,7 +8,7 @@
     <title>List of Groups</title>
 </head>
 
-<body class="">
+<body class="w-full">
 
     <div>
         <!-- Navbar -->
@@ -289,7 +289,7 @@
             </tbody>
         </table>
 
-        <footer class="bg-gray-300 p-6 sticky">
+        <footer class="bg-sky-200 p-6">
             <ul class="flex gap-6 justify-center">
                 <li><a href="#">Association Rules</a></li>
                 <li><a href="#">Inclusion Policy</a></li>
