--- a/public/contact.html
+++ b/public/contact.html
@@ -3,9 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
     <title>Document</title>
 </head>
 <body>
+
+  <header
+  x-data="{ mobilenavOpen: false }"
+  class="md:flex items-center justify-between [&>*]:px-8 bg-blue-600 h-20 text-white sticky top-0 z-40"
+>
+  <div class="flex items-center justify-between h-15">
+    <logo>
+      <a class="flex items-center gap-1 text-3xl" href="index.html">
+        <img class="h-10" src="images/u3a.png" alt="">
+        <span class="text-xl font-bold ml-2">U3A</span>
+      </a>
+    </logo>
+    <mobileicon class="md:hidden">
+      <a
+        @click="mobilenavOpen = !mobilenavOpen"
+        class="h-12 w-12 flex items-center justify-center cursor-pointer hover:bg-gray-700 rounded-lg"
+      >
+        <img
+          x-show="!mobilenavOpen"
+          class="w-6 h-6 select-none"
+          src="https://img.icons8.com/small/64/ffffff/menu.png"
+        />
+        <img
+          x-show="mobilenavOpen"
+          x-cloak
+          class="w-6 h-6 select-none"
+          src="https://img.icons8.com/small/64/ffffff/delete-sign.png"
+        />
+      </a>
+    </mobileicon>
+  </div>
+  <nav
+    x-show="mobilenavOpen"
+    x-cloak
+    class="md:!block bg-blue-600 h-screen w-screen md:h-auto md:w-auto -mt-20 md:mt-0 absolute md:relative z-[-1]"
+    x-transition:enter="duration-300 ease-out"
+    x-transition:enter-start="opacity-0 -translate-y-96"
+    x-transition:enter-end="opacity-100 translate-y-0"
+  >
+    <ul
+      class="flex items-center navitems flex-col md:flex-row gap-8 md:gap-0 justify-center h-full -translate-y-10 md:translate-y-0"
+    >
+      
+      <li @click="mobilenavOpen = !mobilenavOpen" class="m-2 text-2xl"><a class="hover:text-yellow-300 hover:shadow-lg" href="index.html">Home</a></li>
+      <li @click="mobilenavOpen = !mobilenavOpen" class="m-2 text-2xl"><a class="hover:text-yellow-300 hover:shadow-lg" href="group-details.html">Groups</a></li>
+      <li @click="mobilenavOpen = !mobilenavOpen" class="m-2 text-2xl"><a class="hover:text-yellow-300 hover:shadow-lg" href="about.html">About</a></li>
+      <li @click="mobilenavOpen = !mobilenavOpen" class="m-2 text-2xl"><a class="hover:text-yellow-300 hover:shadow-lg" href="events.html">Events</a></li>
+      <li @click="mobilenavOpen = !mobilenavOpen" class="m-2 text-2xl"><a class="hover:text-yellow-300 hover:shadow-lg" href="info.html">Information</a></li>
+      
+    </ul>
+  </nav>
+</header>
+
+
     <h1>Contact Page</h1>
     <footer class="bg-gray-300 p-6 sticky">
         <ul class="flex gap-6 justify-center">
